#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Translator
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-52
2016-6-14 David Schneider
- disable unit test on rhel5 because build machine is too loaded

Tag: V00-02-51
2016-6-13 David Schneider
- update to pdsdata 8.6.12 for Partition::ConfigV2 JIRA PSAS-241

Tag: V00-02-50
2016-6-2 David Schneider
- update to pdsdata 8.6.10 with BldDataEOrbitsV0 JIRA PSAS-239
  and smldata fix PSAS-237

Tag: V00-02-49
2016-4-20 David Schneider
- rewrite unit test that failed. PSAS-236

Tag: V00-02-48
2016-4-19 David Schneider
- remove unit test that fails on rhel5 debug: PSAS-236

Tag: V00-02-47
2016-4-18 David Schneider
- update to pdsdata 8.6.8 with Andor::ConfigV2 JIRA PSAS-229

Tag: V00-02-46
2016-4-14 David Schneider
- add translator support (with unit test) for generic1d JIRA PSAS-225

Tag: V00-02-45
2016-4-14 David Schneider
- add unit test for ocean optics datav3 JIRA PSAS-227
	
Tag: V00-02-44
2016-4-4 David Schneider
- update to pdsdata 8.6.7 but only support UsdUsb::Fex* at this time,
  no support for Generic1D yet - JIRA PSAS-225
- add unit test for UsdUsb::FexConfig name list of strings - multi test 20
	
Tag: V00-02-43
2016-3/28 David Schneider
- update documentation
	
Tag: V00-02-42
2016-3/28 David Schneider
- deprecate fast_index option. Document new model with .smd (small data) files. 
  Introduce fast_index_force option if fast_index is still needed.
- add -q option to mpiexec commands in unit tests since we don't have openib installed
  on the interactive nodes where I frequently test. Consequently we won't test for the
  presence of openib on the build machines psdev etc.

Tag: V00-02-41
2016-2-5 David Schneider