@@ -1,0 +1,44 @@
+########################################################
+# This is a nonstandard configuration file for the
+# Translator. LCLS user may select it through the web portal of
+# experiments to manage standard or monitoring HDF5 translation
+# (it will work for either).
+#
+# Users may want to add their own psana modules to the translation. 
+# The web portal of experiments allows users to specify their own release 
+# directory and their own config file for automatic translation. Users are 
+# encourages to make a copy of this config file, modify it, and specify it
+# in the web page.
+#
+# The most important thing to be mindful of when modifying this config file
+# for automatic translation, is to keep Translator.H5Output at the last module 
+# in the psana modules parameter below:
+
+[psana]
+
+modules = Translator.PsanaModuleDetectorXface Translator.H5Output
+
+[Translator.PsanaModuleDetectorXface]
+# include standard translation of detectors n shots.
+# set to 1 to include all standard, but set to 0 or something negative
+# to never include standard. Use something prime in case it helps with
+# time bias
+raw_freq = 109
+
+
+[Translator.H5Output]
+# here is where you would set any Translator specific options you require.
+# Several Translator.H5Output options cannot be set through the config file
+# as they are controlled through the data management system. The controlled 
+# parameters are:
+#
+deflate = 1
+shuffle = True
+#
+# See the page https://confluence.slac.stanford.edu/display/PSDM/The+XTC-to-HDF5+Translator
+# for complete documentation on using the Translator. In particular the section
+#
+# https://confluence.slac.stanford.edu/display/PSDM/The+XTC-to-HDF5+Translator#TheXTC-to-HDF5Translator-PsanaConfigurationFileandallOptions
+#
+# includes an expandable widget that gives one all the Translator options.
+
